# pipr

./: .gitignore  Cargo.toml  LICENSE  PKGBUILD  Readme.md  bookmarks.rs  bubblewarp-cmd.sh  build_docker.sh  flake.nix  foo  pipr_0.0.15-1.deb  rustfmt.toml
shell_integration/: pipr_hotkey.bash  pipr_hotkey.fish  pipr_hotkey.xonsh  pipr_hotkey.zsh
src/: app.rs  bookmark.rs  command_evaluation.rs  command_template.rs  commandlist.rs  lib.rs  lineeditor.rs  main.rs  pipr_config.rs  snippets.rs  ui.rs  util.rs
src/app/: app.rs  command_list_window.rs  key_select_menu.rs  main_window.rs  mod.rs
